Cambia contenido a 0000-01-02.md
Agrega cita a Forest Gump

--- a/_posts/0000-01-02-nahuel-v.md
+++ b/_posts/0000-01-02-nahuel-v.md
@@ -2,5 +2,8 @@
 layout: slide
 title: "Bienvenidos a la segunda página!"
 ---
-Tu texto
+Como dijo Forest Gump:
+
+> La vida es como una caja de bombones...
+> Nunca sabes lo que te puede tocar.
 Utiliza la flecha hacia la izquierda para volver!
